# cpmdroid

./: .gitignore  CHANGELOG.md  PRIVACY_POLICY.md  README.md  WIP.md  gradlew.bat  settings.gradle.kts  todo.txt
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  emu_io_android.cpp
app/src/main/java/com/awohl/cpmdroid/: DiskCatalogAdapter.kt  EmulatorEngine.kt  HelpActivity.kt  HelpTopicActivity.kt  MainActivity.kt  SettingsActivity.kt  TerminalView.kt
app/src/main/java/com/awohl/cpmdroid/data/: DiskCatalogRepository.kt  DiskDownloadManager.kt  DiskInfo.kt  EmulatorSettings.kt  SettingsRepository.kt
app/src/main/java/com/romwbw/cpmdroid/: DiskCatalogAdapter.kt  EmulatorEngine.kt  HelpActivity.kt  HelpTopicActivity.kt  MainActivity.kt  SettingsActivity.kt  TerminalView.kt
app/src/main/java/com/romwbw/cpmdroid/data/: DiskCatalogRepository.kt  DiskDownloadManager.kt  DiskInfo.kt  EmulatorSettings.kt  SettingsRepository.kt
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/layout/: activity_help.xml  activity_help_topic.xml  activity_main.xml  activity_settings.xml  dialog_disk_catalog.xml  item_disk_catalog.xml  item_help_topic.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
docs/: PLAY_STORE_DESCRIPTION.txt  bug1.txt  midi.md  release1-9.txt  release_notes.txt  test-invite.txt  v1_3_feedback.txt
help/: help_index.json  help_quick_start.md
release_assets/: help_index.json  help_quick_start.md
